# rust-user-api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20250402000000_create_users_table.sql
src/: db.rs  error.rs  main.rs  models.rs
src/routes/: users.rs
tests/: quick_dev.rs
