[package]
name = "user-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.97"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.97"
httpc-test = "0.1.10"